Assigned hotel_ids randomly

--- a/data/processed/Preprocessing_Hotel_Merge_Data.ipynb
+++ b/data/processed/Preprocessing_Hotel_Merge_Data.ipynb
@@ -319,17 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f2983b7b-f5af-45e7-a297-fdf835e3b5cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.insert(1, 'hotel_id', range(1, len(df_clean) + 1))"
+    "# Generate random hotel IDs from 1 to the number of rows\n",
+    "np.random.seed(42)  # For reproducibility\n",
+    "random_ids = np.random.permutation(len(df_clean)) + 1\n",
+    "\n",
+    "# Add hotel_id column with random IDs\n",
+    "df_clean.insert(1, 'hotel_id', random_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "24cea969-1728-4466-8106-ca06a69e6a24",
    "metadata": {},
    "outputs": [
@@ -351,7 +356,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3b15c395-7d1f-499d-a615-eab0c54e1667",
    "metadata": {},
    "outputs": [],
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e9309a55-1cdc-443a-b465-03482e27128b",
    "metadata": {},
    "outputs": [
